--- a/kubedeploy.yaml
+++ b/kubedeploy.yaml
@@ -18,7 +18,7 @@ spec:
       - name: bhagyashree-healthcare-container
         image: bhagyashreebaddoli/bhagyashreedevopshealth:latest
         ports:
-        - containerPort: 8082
+        - containerPort: 8081
 ---
 apiVersion: v1
 kind: Service
@@ -32,5 +32,6 @@ spec:
 
   type: NodePort
   ports:
-  - port: 8082
-    targetPort: 8082
+  - nodePort: 32000
+    port: 8081
+    targetPort: 8081
